# csad2425ki405vorobeyaa02

./: .gitignore  README.md
.github/workflows/: ci.yaml  ci.yaml.txt
ci/: Build.bat  CMakeLists.txt  RunTests.bat
config/: ConfigFile.json
doc/: Doxyfile
docs/: GenerateDocumentation.bat
docs/output/html/: _8_n_e_t_core_app_00_version_0av8_80_8_assembly_attributes_8cs.html  _auto_detect_c_o_m_port_8_assembly_info_8cs.html  _auto_detect_c_o_m_port_8_global_usings_8g_8cs.html  _client_communication_8h.html  _client_communication_8h.js  _client_communication_8h_source.html  _helper_utils_8h.html  _helper_utils_8h.js  _helper_utils_8h_source.html  _program_8cs.html  _program_8cs.js  _server_8ino.html  annotated.html  annotated_dup.js  class_client_communication-members.html  class_client_communication.html  class_client_communication.js  class_helper_utils-members.html  class_helper_utils.html  class_helper_utils.js  class_serial_port_example_1_1_arduino_config-members.html  class_serial_port_example_1_1_arduino_config.html  class_serial_port_example_1_1_arduino_config.js  class_serial_port_example_1_1_arduino_settings-members.html  class_serial_port_example_1_1_arduino_settings.html  class_serial_port_example_1_1_arduino_settings.js  class_serial_port_example_1_1_program-members.html  class_serial_port_example_1_1_program.html  classes.html  dir_007e3dc6f615754784f85cbdef9ca73b.html  (+31 more)
src/AutoDetectCOMPort/: AutoDetectCOMPort.sln
src/Client/: ClientCommunication.cpp  ClientCommunication.h  HelperUtils.cpp  HelperUtils.h  main.cpp
src/Server/: Server.ino  ServerLogic.cpp  ServerLogic.h
(+82 files in other folders)
